# sdl-hot-reload

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  win32-build.bat
Engine/: Application.cpp  AssetObserver.cpp  AssetObserver.h  CMakeLists.txt  Debugger.cpp  Debugger.h  Engine.cpp  Engine.h  Entry.cpp  Reloadable.cpp  Reloadable.h  Watcher.cpp  Watcher.h
Game/: CMakeLists.txt  Game.cpp  Game.h
Kernel/: CMakeLists.txt  Kernel.cpp  Kernel.h
Player/: CMakeLists.txt  Player.cpp
engine/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
game/: CMakeLists.txt  game.cpp  game.h
